Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/SocialSLA/Weka-Persistence/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/SocialSLA/Weka-Persistence/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/SocialSLA/Weka-Persistence" class="code">View Weka JPA Persistence on GitHub</a>
+          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence" class="code">View Weka JPA Persistence on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
           <h3>
-<a id="welcome-to-weka-persistence-projeto-page" class="anchor" href="#welcome-to-weka-persistence-projeto-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to WEKA Persistence Projeto Page.</h3>
+<a id="welcome-to-project-page-from-weka-jpa-persistence-framework" class="anchor" href="#welcome-to-project-page-from-weka-jpa-persistence-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Project page from WEKA JPA Persistence Framework</h3>
 
 <p>What makes me want to develop this project:</p>
 
@@ -51,7 +51,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/SocialSLA" class="avatar"><img src="https://avatars3.githubusercontent.com/u/13544018?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/SocialSLA">SocialSLA</a> maintains <a href="https://github.com/SocialSLA/Weka-Persistence">Weka JPA Persistence</a></p>
+      <p><a href="https://github.com/SocialSLA" class="avatar"><img src="https://avatars3.githubusercontent.com/u/13544018?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/SocialSLA">SocialSLA</a> maintains <a href="https://github.com/SocialSLA/Weka-JPA-Persistence">Weka JPA Persistence</a></p>
 
 
       </div>
@@ -62,11 +62,11 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/SocialSLA/Weka-Persistence/tarball/master" class="tar">tar</a><a href="https://github.com/SocialSLA/Weka-Persistence/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/tarball/master" class="tar">tar</a><a href="https://github.com/SocialSLA/Weka-JPA-Persistence/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
-  <script type="text/javascript">
+            <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
