--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Weka JPA Persistence</title>
-  <meta name="description" content="A Framework to persist information with JPA 2.0 (2.1))">
+  <title>WEKA JPA Persistence - V0.0.2</title>
+  <meta name="description" content="A Framework to persist information with JPA 2.0 (2.1)) - V0.0.2">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,15 +22,15 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Weka JPA Persistence</h1>
+      <h1 class="title">WEKA JPA Persistence V0.0.2</h1>
     </header>
     <div id="container">
-      <p class="tagline">A Framework to persist information with JPA 2.0 (2.1))</p>
+      <p class="tagline">A Framework to persist and retrival information with JPA 2.0 (2.1))</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/archive/0.0.2.zip" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/archive/0.0.2.tar.gz" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/SocialSLA/Weka-JPA-Persistence" class="code">View Weka JPA Persistence on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
