more text about project e new release.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
           <h3>
 <a id="welcome-to-project-page-from-weka-jpa-persistence-framework" class="anchor" href="#welcome-to-project-page-from-weka-jpa-persistence-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Project page from WEKA JPA Persistence Framework</h3>
 
+<hr />
+<p> 
+
+Version 0.0.2 Released: </p>
+<p>
+Finishing the first version that generates data, with this release we can already generate the header and simple data JPA entities with at least one interface type ManyToOne being the daughter entity treated as a string.
+</p>
+<p></p>
+<p>
+Removed unnecessary dependencies.
+</p>
+
+<hr/>
 <p>What makes me want to develop this project:</p>
 
 <ul>
