--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/archive/0.0.2.zip" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/archive/0.0.2.tar.gz" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/archive/0.0.2.tar.gz" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/SocialSLA/Weka-JPA-Persistence/archive/0.0.2.zip" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/SocialSLA/Weka-JPA-Persistence" class="code">View Weka JPA Persistence on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
