adicionado informação da existência de exemplos no Wiki.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           <h3>
 <a id="welcome-to-project-page-from-weka-jpa-persistence-framework" class="anchor" href="#welcome-to-project-page-from-weka-jpa-persistence-framework" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Project page from WEKA JPA Persistence Framework</h3>
 
+<h2>Visit Wiki Page for get examples:</h2>
+<ul>
+  <il><a href="https://github.com/SocialSLA/Weka-JPA-Persistence/wiki/Como-Usar-Campos-Extras-com-CallBack">Who to Use a Extra Field with CallBack</a></il>
+</ul>
 <hr />
 <p> 
 
