--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@ Removed unnecessary dependencies.
 <li>Use Entities (POJO) JPA and its metadata to generate the ARFF when you need to outsource information for use by third parties.</li>
 <li>Generate new Entity (POJO) JPA based on information obtained in the ARFF</li>
 </ul>
+<hr/>
+<h1>Dependencies</h1>
+<p>
+<ul>
+  <il>  <a href="http://socialsla.github.io/CDI-Utils/">CDI Utils - Library for help and extras for CDI.</a></il>
+</ul>
+</p>
         </article>
       </div>
     </div>
